--- a/Numerical_integration_tutorial_template.ipynb
+++ b/Numerical_integration_tutorial_template.ipynb
@@ -16,27 +16,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the cosmological angular diameter distance, D_A using 2 different numberical integrators.\n",
+    "Calculate the cosmological angular diameter distance, D_A using 2-3 different numberical integrators.\n",
     "Integrate given equation from z = 0 to z = 10, in steps, to get D_A(z) at certain values of z\n",
     "Plot D_A at each value of z"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -92,7 +78,9 @@
     "\n",
     "$\\frac{c}{H(z)}$\n",
     "\n",
-    "and H(z) is the Hubble constant as a function of redshift. We can assume H(z) is given by\n",
+    "and H(z) is the Hubble constant as a function of redshift. The constant \"C\", is related to the redshift zero Hubble constant, $H_0$, and the speed of light. It has a rough value of 3000 h^-1 Mpc. \"Little h\" is a common convention in cosmology as a way of expressing that we didn't know the valueof $H_0$ very well until recently, and so it was best to leave it as a free parameter. We can take h = 1. (thank you Hollis for pointing this out!) \n",
+    "\n",
+    "We can assume H(z) is given by\n",
     "\n",
     "$\\sqrt{\\Omega_M (1+z)^3 + \\Omega_{\\Lambda}}$\n",
     "\n",
