--- a/Poisson_process_tutorial_template.ipynb
+++ b/Poisson_process_tutorial_template.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a redshift range and generate some initial mock poisson distributed data. Feel free to generate data from constant or linear model. "
+    "Step 1: Define functions that return P(Data|model parameters m and b) given some observed data point."
    ]
   },
   {
@@ -40,8 +40,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define functions that return the P(Data|model parameters m and b) given some observed data.\n",
-    "hint: you'll want to compute the log-likelihood rather than the likelihood directly. This turns addition into multiplication and helps with numerical error. "
+    "Step 2: Define a redshift range and generate some initial mock poisson distributed data. Feel free to generate data from constant or linear model. Begin by defining your likelihood function (as given in the slides). \n",
+    "\n",
+    "On one model, the parameter $\\mu$ will be a constant (pick something that seems reasonable, e.g. gives a small number of counts). In the other model, $\\mu$ will be some function of redshift, something like $mz + b$. \n",
+    "\n",
+    "It turns out that sampling from an arbitrary distribution can be a bit difficult - we can cover how to do this separately - so you'll want to use a function from scipy's random module to sample from the constant model (in other words, scipy has a built in function to do this!). "
    ]
   },
   {
@@ -55,7 +58,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, evaluate your likelihood function from the previous cell on a grid of model parameters. Estimate the poisson rate or location parameter $\\mu$. If the data were drawn from a linear model, what are the inferred values of m and b? How certain of those values are you?"
+    "Step 3: Once you have the P(Data|model) for a single data point from step 1, write a function that sums the probabilities of many individually measured data points. Hint: You'll want to compute the log-likelihood rather than the likelihood directly. This turns addition into multiplication and helps with numerical error. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 4: Now, evaluate your likelihood function from the previous cell on a grid of model parameters. In other words, what is P(D|Model) given many possible values of m and b. Estimate the poisson rate or location parameter $\\mu$ in the const. If the data were drawn from a linear model, what are the inferred values of m and b? How certain of those values are you?"
    ]
   },
   {
